syntax = "proto3";

option go_package = "github.com/tutorialAI/shop/services/auth/proto";
package auth;

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
    string age = 5;
}

message RegisterResponse {
    string token = 1;
    string message = 2;
}
